Don't use embedding search

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -4,7 +4,7 @@
 
 ## Release 15.1.8 - 2025-10-31
 
-In this release, semantic search (embedding search) is supported.
+In this release, semantic search is supported.
 
 ### Improvements
 
@@ -98,7 +98,7 @@ select Data \
 ```
 
 The important feature is that it searches using text, just like keyword search.
-Internally, Groonga performs embedding search to enable semantic search.
+Internally, Groonga creates embedding automatically and use it for semantic search.
 
 Users do not need to create embeddings and search using them.
 You can do semantic search with text, just like keyword search.
