package: update version info to 15.1.8 (2025-10-31)

--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.1.8-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Fri, 31 Oct 2025 06:38:37 -0000
+
 groonga (15.1.7-1) unstable; urgency=low
 
   * New upstream release.
