doc news: add 15.1.9 entry

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,5 +1,44 @@
 # News - 15 series
 
+(release-15-1-9)=
+
+## Release 15.1.9 - 2025-11-04
+
+In this release, we can provide pacakges for Ubuntu again.
+
+### Improvements
+
+#### [{doc}`/reference/functions/language_model_vectorize`] Added support for parallel vectorization
+
+If we set `--n-default-workers=-1`, Groonga execute in parallel with the threads of at most the number of CPU cores.
+However, `--n-default-workers=-1` will not be optimal because it's based on the number of CPUs.
+
+We must check GPU usage not CPU usage for the optimal number of workers.
+
+#### [{doc}`/reference/tokenizers/token_language_model_knn`] Added support for prefix
+
+Some models such as multilingual-e5 require prefix for search target texts and query texts.
+This improvement adds support for these cases.
+
+`passage_prefix` is for prefix for search target text.
+`query_prefix` is for prefix for query text.
+
+For example, we can set `"passage: ` prefix in search target text and `query: ` prefix in query text as below.
+
+```
+TokenLanguageModelKNN("model", "hf:///groonga/multilingual-e5-base-Q4_K_M-GGUF", \
+                      "code_column", "rabitq_code", \
+                      "passage_prefix", "passage: ", \
+                      "query_prefix", "query: ")
+```
+
+### Fixes
+
+#### [{doc}`/install/ubuntu`] Provided pacakges again
+
+We couldn't provide packages for Ubuntu in Groonga 15.1.8 caused by building failure in Lunchpad.
+In this relase, we provide packages for Ubuntu again by resolving issue for building failure
+
 (release-15-1-8)=
 
 ## Release 15.1.8 - 2025-10-31
