--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -4,13 +4,15 @@
 
 ## Release 15.1.9 - 2025-11-04
 
-In this release, we can provide pacakges for Ubuntu again.
+In this release, we added support for parallel vectorization.
 
 ### Improvements
 
-#### [{doc}`/reference/functions/language_model_vectorize`] Added support for parallel vectorization
+#### Added support for parallel vectorization
 
-If we set `--n-default-workers=-1`, Groonga execute in parallel with the threads of at most the number of CPU cores.
+We can execute parallel vectorization in {doc}`/reference/functions/language_model_vectorize`, {doc}`/reference/tokenizers/token_language_model_knn`, and {doc}`/reference/functions/language_model_vectorize`.
+
+However, if we set `--n-default-workers=-1`, Groonga execute in parallel with the threads of at most the number of CPU cores.
 However, `--n-default-workers=-1` will not be optimal because it's based on the number of CPUs.
 
 We must check GPU usage not CPU usage for the optimal number of workers.
@@ -34,9 +36,9 @@ TokenLanguageModelKNN("model", "hf:///groonga/multilingual-e5-base-Q4_K_M-GGUF",
 
 ### Fixes
 
-#### [{doc}`/install/ubuntu`] Provided pacakges again
+#### [{doc}`/install/ubuntu`] Provided packages for Ubuntu that is provided for PPA(Personal Package Archive) again
 
-We couldn't provide packages for Ubuntu in Groonga 15.1.8 caused by building failure in Lunchpad.
+We couldn't provide packages for Ubuntu that is provided for PPA(Personal Package Archive) in Groonga 15.1.8 caused by building failure in Lunchpad.
 In this relase, we provide packages for Ubuntu again by resolving issue for building failure
 
 (release-15-1-8)=
