Fix wrong English

--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -32,7 +32,7 @@ msgstr "ベクトル化の並列処理をサポート"
 msgid "We can execute parallel vectorization in {doc}`/reference/functions/language_model_knn`, {doc}`/reference/tokenizers/token_language_model_knn`, and {doc}`/reference/functions/language_model_vectorize`."
 msgstr "{doc}`/reference/functions/language_model_knn` や {doc}`/reference/tokenizers/token_language_model_knn` や {doc}`/reference/functions/language_model_vectorize` で並列にベクトル化できるようになりました。"
 
-msgid "However, if we set `--n-default-workers=-1`, Groonga execute in parallel with the threads of at most the number of CPU cores. However, `--n-default-workers=-1` will not be optimal because it's based on the number of CPUs."
+msgid "However, if we set `--n-default-workers=-1`, Groonga executes in parallel with the threads of at most the number of CPU cores. However, `--n-default-workers=-1` will not be optimal because it's based on the number of CPUs."
 msgstr "ただし、`--n-default-workers=-1`をセットすると、GroongaはCPUのコア数以下のスレッドで並列実行しますが、`--n-default-workers=-1`はCPU数をベースにするため最適ではありません。"
 
 msgid "We must check GPU usage not CPU usage for the optimal number of workers."
