--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -25,7 +25,7 @@ This improvement adds support for these cases.
 `passage_prefix` is for prefix for search target text.
 `query_prefix` is for prefix for query text.
 
-For example, we can set `"passage: ` prefix in search target text and `query: ` prefix in query text as below.
+For example, we can set `passage: ` prefix in search target text and `query: ` prefix in query text as below.
 
 ```
 TokenLanguageModelKNN("model", "hf:///groonga/multilingual-e5-base-Q4_K_M-GGUF", \
