--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -12,7 +12,7 @@ In this release, we added support for parallel vectorization.
 
 We can execute parallel vectorization in {doc}`/reference/functions/language_model_knn`, {doc}`/reference/tokenizers/token_language_model_knn`, and {doc}`/reference/functions/language_model_vectorize`.
 
-However, if we set `--n-default-workers=-1`, Groonga executes in parallel with the threads of at most the number of CPU cores.
+However, if we set `--n-default-workers=-1`, Groonga executes in parallel using up to as many threads as the number of CPU cores.
 However, `--n-default-workers=-1` will not be optimal because it's based on the number of CPUs.
 
 We must check GPU usage not CPU usage for the optimal number of workers.
@@ -22,8 +22,8 @@ We must check GPU usage not CPU usage for the optimal number of workers.
 Some models such as multilingual-e5 require prefix for search target texts and query texts.
 This improvement adds support for these cases.
 
-`passage_prefix` is for prefix for search target text.
-`query_prefix` is for prefix for query text.
+- `passage_prefix` is for prefix for search target text.
+- `query_prefix` is for prefix for query text.
 
 For example, we can set `passage: ` prefix in search target text and `query: ` prefix in query text as below.
 
