--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -28,7 +28,7 @@ For example, we can set `passage: ` prefix in search target text and `query: ` p
 
 ```
 TokenLanguageModelKNN("model", "hf:///groonga/multilingual-e5-base-Q4_K_M-GGUF", \
-                      "code_column", "rabbitq_code", \
+                      "code_column", "rabitq_code", \
                       "passage_prefix", "passage: ", \
                       "query_prefix", "query: ")
 ```
