doc news: add 15.2.0 entry

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,5 +1,19 @@
 # News - 15 series
 
+(release-15-2-0)=
+
+## Release 15.2.0 - 2025-11-10
+
+In this release, we provide packages for Ubuntu that are provided for PPA (Personal Package Archive) again by resolving the issue causing the build failure.
+
+### Fixes
+
+[{doc}`/install/ubuntu`] Provided packages for Ubuntu that are provided for PPA(Personal Package Archive) again
+
+We couldn't provide packages for Ubuntu that are provided for PPA (Personal Package Archive) in Groonga 15.1.8 and 15.1.9 due to a build failure in Launchpad.
+
+In this release, we provide packages for Ubuntu again by resolving the issue causing the build failure.
+
 (release-15-1-9)=
 
 ## Release 15.1.9 - 2025-11-05
