doc news: add draft

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,5 +1,31 @@
 # News - 15 series
 
+(release-15-2-1)=
+
+## Release 15.2.1 - 2025-11-29
+
+### Improvements
+
+#### [{doc}`/reference/commands/column_create`] Added support for progress log of index construction
+
+#### [{doc}`/reference/tokenizers/token_language_model_knn`] Added support for progress log
+
+#### [{doc}`/reference/tokenizers/token_language_model_knn`] Added `k` option
+
+#### [{doc}`/reference/tokenizers/token_language_model_knn`] Added `centroid_column` option
+
+### Fixes
+
+#### Fixed a bug that check_max is overflowed with 4096 bytes key
+
+[GH-901](https://github.com/pgroonga/pgroonga/issues/901)
+
+Reported by lilydjwg.
+
+### Thanks
+
+- lilydjwg
+
 (release-15-2-0)=
 
 ## Release 15.2.0 - 2025-11-10
