--- a/doc/locale/ja/LC_MESSAGES/reference/functions/language_model_knn.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/functions/language_model_knn.po
@@ -113,11 +113,11 @@ msgstr ""
 msgid "Specify the number of records to return. If you don't set this option, the upper limit of the number of records to return is `10`."
 msgstr "返すレコード数を指定します。このオプションを設定しない場合、返すレコード数の上限は`10`になります。"
 
-msgid "If you set to `-n` in this option, the upper limit of the number of records to return is the number of records in the target table - (n-1)."
-msgstr "このオプションに`-n`を設定すると返すレコード数の上限は、対象のテーブルのレコード数 - (n-1)になります。"
+msgid "You can specify a negative value. It means that the number of matched records + `k` + 1. For example, `\"{ \"k\" : -1 }\"` outputs all records. It’s a very useful value to show all records."
+msgstr "負の値を指定することもできます。負の値の場合は、最大で`マッチしたレコード数 + k + 1`件のレコードを出力するという意味になります。例えば、`\"{ \"k\" : -1 }\"`はすべてのレコードを出力します。これはすべてのレコードを表示する場合にとても便利です。"
 
-msgid "For example, if you want to receive records that the number of records in the target table, you should set `k` is `-1` as below."
-msgstr "例えば、対象のテーブルのレコード数を受け取りたい場合は、以下のように`k`を`-1`に設定します。"
+msgid "Here is a simple negative `k` value usage example."
+msgstr "以下は負の値を使った`k`の簡単な使用例です。"
 
 msgid "Return value"
 msgstr "戻り値"
