--- a/doc/locale/ja/LC_MESSAGES/reference/tokenizers/token_language_model_knn.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/tokenizers/token_language_model_knn.po
@@ -119,16 +119,16 @@ msgstr ""
 msgid "Specify the number of clusters to use as indexes. If not specified, an appropriate value will be set automatically."
 msgstr "インデックスとして利用するクラスタ数を指定します。省略すると自動で適切な値を設定します。"
 
-msgid "Usually, no specification is necessary."
-msgstr "通常は指定の必要はありません。"
+msgid "In most cases, you don't need to set this option explicitly."
+msgstr "多くの場合、明示的にこのオプションを設定する必要はありません。"
 
 msgid "`n_gpu_layers`"
 msgstr ""
 
-msgid "Specify the number of GPU layers to use in language model. If not specified, Groonga use GPU as much as possible."
+msgid "Specify the number of GPU layers to use for language model. If not specified, Groonga uses GPU as much as possible."
 msgstr "言語モデルが利用するGPUレイヤー数を指定します。省略すると、可能な限りのGPUを使用します。"
 
-msgid "You can disable GPU by setting `0` into `n_gpu_layers`."
+msgid "To disable GPU usage, set `n_gpu_layers` to 0."
 msgstr "`n_gpu_layers`の`0`を設定することで、GPUを無効にすることができます。"
 
 msgid "See also"
