--- a/doc/locale/ja/LC_MESSAGES/reference/tokenizers/token_language_model_knn.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/tokenizers/token_language_model_knn.po
@@ -119,19 +119,19 @@ msgstr "省略可能引数"
 msgid "`passage_prefix`"
 msgstr ""
 
-msgid "Some models such as multilingual-e5 require prefix for search target texts and query texts."
+msgid "Some models such as multilingual-e5 require prefix used for search-target texts and query texts."
 msgstr "multilingual-e5のような一部のモデルでは、検索対象テキストや検索クエリにプレフィックスが必要です。"
 
-msgid "`passage_prefix` is for prefix for search target text."
+msgid "`passage_prefix` specifies the prefix for search target text."
 msgstr "`passage_prefix`は、検索対象テキストのプレフィックスを指定するために使います。"
 
-msgid "For example, we can set `passage: ` prefix in search target text and `query: ` prefix in query text as below."
+msgid "For example, you can set `passage: ` prefix in search target text and `query: ` prefix in query text as below."
 msgstr "検索対象テキストにプレフィックスとして`passage: `を、検索クエリクエリには`query: `を設定する例は次のとおりです。"
 
 msgid "`query_prefix`"
 msgstr ""
 
-msgid "`query_prefix` is for prefix for query text."
+msgid "`query_prefix` specifies the prefix for query text."
 msgstr "`query_prefix`は、検索クエリのプレフィックスを指定するために使います。"
 
 msgid "`n_clusters`"
