--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -2,7 +2,7 @@
 
 (release-15-2-1)=
 
-## Release 15.2.1 - 2025-11-29
+## Release 15.2.1 - 2025-12-01
 
 ### Improvements
 
@@ -10,9 +10,24 @@
 
 #### [{doc}`/reference/tokenizers/token_language_model_knn`] Added support for progress log
 
-#### [{doc}`/reference/tokenizers/token_language_model_knn`] Added `k` option
-
 #### [{doc}`/reference/tokenizers/token_language_model_knn`] Added `centroid_column` option
+
+#### [{doc}`/reference/tokenizers/token_language_model_knn`] Added `n_gpu_layers` option
+
+Specify the number of GPU layers to use for language model.
+If not specified, Groonga uses GPU as much as possible.
+
+In most cases, you don't need to set this option explicitly.
+
+To disable GPU usage, set `n_gpu_layers` to 0.
+
+#### [{doc}`/reference/functions/language_model_knn`] Added `k` option
+
+Specify the number of records to return.
+If you don't set this option, the upper limit of the number of records to return is `10`.
+
+You can specify a negative value. It means that the number of "matched records + `k` + 1".
+For example, `"{ "k" : -1 }"` outputs all records. It’s a very useful value to show all records.
 
 ### Fixes
 
