--- a/doc/locale/ja/LC_MESSAGES/reference/commands/column_create.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/commands/column_create.po
@@ -1107,13 +1107,13 @@ msgstr ""
 msgid "Specifies the log level of progress logs."
 msgstr "プログレスログのログレベルを指定します。"
 
-msgid "You can see the progress log during :ref:`offline-index-construction` ."
+msgid "You can view the progress log during :ref:`offline-index-construction` ."
 msgstr "プログレスログは :ref:`静的インデックス構築 <offline-index-construction>` のときに出力されます。"
 
-msgid "The default log level is ``debug``. So you need to log all debug logs to see progress logs."
+msgid "The default log level is ``debug``. This means you must enable debug level logging to view progress logs."
 msgstr "デフォルトのログレベルは ``debug`` です。そのため、プログレスログを見るためにはすべてのデバッグログも出力する必要があります。"
 
-msgid "If you use ``notice`` as a log level, you can see progress logs without other debug logs. See :ref:`log-level-level` for available log levels."
+msgid "If you set the log level to ``notice``, you can view progress logs without other debug logs. See :ref:`log-level-level` for available log levels."
 msgstr "ログレベルに ``notice`` を使うと、他のデバッグログなしでプログレスログを確認できます。指定可能なログレベルは :ref:`log-level-level` を参照してください。"
 
 msgid "The default is ``debug``."
