doc news: Fix the typo in `LargeBinary` to `LongBinary`

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -171,7 +171,7 @@ language_model_vectorize("hf:///groonga/all-MiniLM-L6-v2-Q4_K_M-GGUF", content)
 
 Using this feature is useful because Groonga handles the download and placement.
 
-#### [{doc}`/reference/types`] Add `ShortBinary`, `Binary` and `LargeBinary`
+#### [{doc}`/reference/types`] Add `ShortBinary`, `Binary` and `LongBinary`
 
 This feature is still experimental and unstable.
 
