--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -8,9 +8,30 @@
 
 #### [{doc}`/reference/commands/column_create`] Added support for progress log of index construction
 
-#### [{doc}`/reference/tokenizers/token_language_model_knn`] Added support for progress log
+You can view the progress log during offline index construction.
+
+The default log level is ``debug``. This means you must enable debug level logging to view progress logs.
+If you set the log level to ``notice``, you can view progress logs without other debug logs.
 
 #### [{doc}`/reference/tokenizers/token_language_model_knn`] Added `centroid_column` option
+
+This option is for large embeddings with more than 1025 dimensions (more than 4100 bytes).
+Groonga table keys must be 4 KiB or smaller. Embeddings larger than 4 KiB cannot be stored as keys.
+
+You can use this option to store large embeddings in a column instead of in the table key.
+Specify the column for storing embeddings and add it to the table for the index as below.
+
+```
+table_create LargeCentroids TABLE_HASH_KEY UInt32 \
+  --default_tokenizer \
+      'TokenLanguageModelKNN("model", "hf:///groonga/multilingual-e5-base-Q4_K_M-GGUF", \
+                             "centroid_column", "centroid", \
+                             "code_column", "embedding_code", \
+                             "passage_prefix", "passage: ", \
+                             "query_prefix", "query: ")'
+column_create LargeCentroids centroid COLUMN_VECTOR Float32
+column_create LargeCentroids data_content COLUMN_INDEX Memos content
+```
 
 #### [{doc}`/reference/tokenizers/token_language_model_knn`] Added `n_gpu_layers` option
 
