--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -10,8 +10,8 @@
 
 You can view the progress log during offline index construction.
 
-The default log level is ``debug``. This means you must enable debug level logging to view progress logs.
-If you set the log level to ``notice``, you can view progress logs without other debug logs.
+The default log level is `debug`. This means you must enable debug level logging to view progress logs.
+If you set the log level to `notice`, you can view progress logs without other debug logs.
 
 #### [{doc}`/reference/tokenizers/token_language_model_knn`] Added `centroid_column` option
 
