Fix wrong English
Co-authored-by: takuya kodama <a.s.takuya1026@gmail.com>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -45,7 +45,7 @@ To disable GPU usage, set `n_gpu_layers` to 0.
 #### [{doc}`/reference/functions/language_model_knn`] Added `k` option
 
 Specify the number of records to return.
-If you don't set this option, the upper limit of the number of records to return is `10`.
+If you don't set this option, the upper limit of the number of returned records is `10`.
 
 You can specify a negative value. It means that the number of "matched records + `k` + 1".
 For example, `"{ "k" : -1 }"` outputs all records. It’s a very useful value to show all records.
