--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -52,10 +52,9 @@ For example, `"{ "k" : -1 }"` outputs all records. It’s a very useful value to
 
 ### Fixes
 
-#### Fixed a bug that the index build by offline index construction may be broken with 4096 bytes key
+#### Fixed a bug that occurs overflow in the key of `TABLE_PAT_KEY` tables.
 
-Fix: [pgroonga/pgroonga#910](https://github.com/pgroonga/pgroonga/issues/901)
-
+This issue is found in PGroonga by [pgroonga/pgroonga#910](https://github.com/pgroonga/pgroonga/issues/901).
 If you execute offline index construction against the column has large size value(the value such as the size of token is 4096 bytes after tokenize), the index may be broken.
 
 Reported by lilydjwg.
