Fix wrong English

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -52,10 +52,10 @@ For example, `"{ "k" : -1 }"` outputs all records. It’s a very useful value to
 
 ### Fixes
 
-#### Fixed a bug that occurs overflow in the key of `TABLE_PAT_KEY` tables.
+#### Fixed a bug that causes overflow in the key of `TABLE_PAT_KEY` tables.
 
-This issue is found in PGroonga by [pgroonga/pgroonga#910](https://github.com/pgroonga/pgroonga/issues/901).
-If you execute offline index construction against the column has large size value(the value such as the size of token is 4096 bytes after tokenize), the index may be broken.
+This issue is found in PGroonga by [pgroonga/pgroonga#901](https://github.com/pgroonga/pgroonga/issues/901).
+If you execute offline index construction against a column that has a large size value (When the size of a token is 4096 bytes after tokenization), the index may be broken.
 
 Reported by lilydjwg.
 
